fixup: rotates your overflow 90 degrees

--- a/support/web/css/code.scss
+++ b/support/web/css/code.scss
@@ -25,7 +25,7 @@ code, pre { width: min-content; }
 div.sourceCode {
   @include material(var(--code-bg));
 
-  overflow-y: scroll;
+  overflow-x: auto;
 
   > pre {
     background-color: var(--code-bg);
